Config/etc/iptables/iptables.rules
*filter
:INPUT DROP [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT DROP [0:0]
:BASE - [0:0]
-A INPUT -j BASE
-A OUTPUT -j BASE
-A BASE -i lo -j ACCEPT
-A BASE -s 127.0.0.1/32 -d 127.0.0.1/32 -j ACCEPT
-A BASE -p icmp -m icmp --icmp-type 3 -j ACCEPT
-A BASE -p icmp -m icmp --icmp-type 3/1 -j ACCEPT
-A BASE -p icmp -m icmp --icmp-type 0 -m limit --limit 1/sec -j ACCEPT
-A BASE -p icmp -m icmp --icmp-type 8 -m limit --limit 1/sec -j ACCEPT
-A BASE -f -j DROP
-A BASE -d 0.0.0.0/32 -j DROP
-A BASE -s 224.0.0.0/8 -j DROP
-A BASE -d 224.0.0.0/8 -j DROP
-A BASE -d 255.255.255.255/32 -j DROP
-A BASE -s 255.255.255.255/32 -j DROP
-A BASE -m state --state INVALID -j DROP
-A BASE -f -m limit --limit 10/min -j ACCEPT
-A BASE -m addrtype --dst-type ANYCAST -j DROP
-A BASE -m addrtype --dst-type BROADCAST -j DROP
-A BASE -m addrtype --dst-type MULTICAST -j DROP
-A BASE -p tcp -m state --state RELATED,ESTABLISHED -j ACCEPT
-A BASE -p udp -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -m tcp -p tcp --dport 53 -j ACCEPT
-A OUTPUT -m udp -p udp --dport 53 -j ACCEPT
-A OUTPUT -m tcp -p tcp --dport 80 -j ACCEPT
-A OUTPUT -m udp -p udp --dport 80 -j ACCEPT
-A OUTPUT -m tcp -p tcp --dport 443 -j ACCEPT
-A OUTPUT -m udp -p udp --dport 443 -j ACCEPT
-A OUTPUT -m udp -p udp --dport 123 -j ACCEPT
-A OUTPUT -m tcp -p tcp --dport 11371 -j ACCEPT
-A OUTPUT -m udp -p udp --dport 67:68 -j ACCEPT
-A INPUT -m tcp -p tcp --dport 22 -j ACCEPT
COMMIT
